--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "list-view",
+  "name": "slds-react-template",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@salesforce-ux/design-system": "^2.8.3",
-    "history": "^4.9.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router": "^5.0.0",
